--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,25 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="203dp"
-        android:layout_height="209dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.73"
-        app:srcCompat="@drawable/pregunta" />
+        app:layout_constraintVertical_bias="0.84000003"
+        app:srcCompat="@drawable/cora_e" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="239dp"
-        android:layout_height="233dp"
+        android:layout_width="230dp"
+        android:layout_height="230dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.24000001"
-        app:srcCompat="@drawable/control" />
+        app:layout_constraintVertical_bias="0.16000003"
+        app:srcCompat="@drawable/juego_f_e" />
 </androidx.constraintlayout.widget.ConstraintLayout>
