--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/img_2"
         android:layout_width="200dp"
         android:layout_height="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -16,10 +16,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.84000003"
-        app:srcCompat="@drawable/cora_e" />
+        app:srcCompat="@drawable/cora_e"
+        android:onClick="onClick"/>
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/img_1"
         android:layout_width="230dp"
         android:layout_height="230dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,5 +28,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.16000003"
-        app:srcCompat="@drawable/juego_f_e" />
+        app:srcCompat="@drawable/juego_f_e"
+        android:onClick="onClick"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
