--- a/app/src/main/res/layout/activity_arrastrar_soltar.xml
+++ b/app/src/main/res/layout/activity_arrastrar_soltar.xml
@@ -6,25 +6,128 @@
     android:layout_height="match_parent"
     tools:context=".arrastrar_soltar">
 
-    <ImageView
-        android:id="@+id/i_1"
+    <!--Card-->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.110000014"
+        app:layout_constraintVertical_bias="0.16000003">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <!--Card Menu-->
+            <TableRow
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:cardBackgroundColor="#3F51B5">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Arrastra y suelta la opcion correcta" />
+                </androidx.cardview.widget.CardView>
+            </TableRow>
+            <!--Card Menu-->
+            <TableRow
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
+
+                <ImageView
+                    android:id="@+id/base"
+                    android:layout_width="89dp"
+                    android:layout_height="88dp"
+                    android:layout_gravity="center"
+                    app:srcCompat="@android:drawable/btn_dialog" />
+            </TableRow>
+            <!--Card-->
+            <TableRow
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <View
+                        android:id="@+id/divider"
+                        android:layout_width="200dp"
+                        android:layout_height="1dp"
+                        android:background="?android:attr/listDivider"
+                        android:backgroundTint="#000000" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Explicacion" />
+                </androidx.cardview.widget.CardView>
+            </TableRow>
+
+
+            <!--Card-->
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+    <!--Card-->
+
+    <ImageView
+        android:id="@+id/i_1"
+        android:layout_width="83dp"
+        android:layout_height="95dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.74"
         app:srcCompat="@mipmap/logo_app" />
 
     <ImageView
         android:id="@+id/i_2"
-        android:layout_width="89dp"
-        android:layout_height="88dp"
+        android:layout_width="83dp"
+        android:layout_height="95dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.11"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.74"
+        app:srcCompat="@drawable/c1"/>
+
+    <ImageView
+        android:id="@+id/i_3"
+        android:layout_width="83dp"
+        android:layout_height="95dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.84"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.74"
+        app:srcCompat="@drawable/c3" />
+
+    <Button
+        android:id="@+id/siguiente"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.84000003"
-        app:srcCompat="@android:drawable/btn_dialog" />
+        app:layout_constraintVertical_bias="0.89" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
