--- a/app/src/main/res/layout/activity_arrastrar_soltar.xml
+++ b/app/src/main/res/layout/activity_arrastrar_soltar.xml
@@ -92,6 +92,7 @@
 
 
                     <TextView
+                        android:id="@+id/texto_datos"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
