--- a/app/src/main/res/layout/activity_escojer_niveles.xml
+++ b/app/src/main/res/layout/activity_escojer_niveles.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".escojer_niveles">
+    tools:context=".escojer_niveles"
+    android:background="@drawable/gif">
 
     <LinearLayout
         android:layout_width="match_parent"
