--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,23 +11,23 @@
         android:id="@+id/img_2"
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:onClick="onClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.84000003"
-        app:srcCompat="@drawable/cora_e"
-        android:onClick="onClick"/>
+        app:layout_constraintVertical_bias="0.8"
+        app:srcCompat="@drawable/cora_e" />
 
     <ImageView
         android:id="@+id/img_1"
         android:layout_width="230dp"
         android:layout_height="230dp"
+        android:onClick="onClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.16000003"
-        app:srcCompat="@drawable/juego_f_e"
-        android:onClick="onClick"/>
+        app:layout_constraintVertical_bias="0.07999998"
+        app:srcCompat="@drawable/juego_f_e" />
 </androidx.constraintlayout.widget.ConstraintLayout>
