--- a/app/src/main/res/layout/activity_memorama.xml
+++ b/app/src/main/res/layout/activity_memorama.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".menu_juegos">
+    tools:context=".menu_juegos"
+    android:background="@drawable/image">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -176,6 +177,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Reiniciar"
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.16"
@@ -192,7 +194,8 @@
         app:layout_constraintHorizontal_bias="0.83"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.96" />
+        app:layout_constraintVertical_bias="0.96"
+        android:textColor="#ffffff"/>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
