--- a/app/src/main/res/layout/activity_visor_imagenes.xml
+++ b/app/src/main/res/layout/activity_visor_imagenes.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".visor_imagenes">
+    tools:context=".visor_imagenes"
+    android:background="#DBD9E7">
 
     <ImageView
         android:id="@+id/img_3"
