--- a/app/src/main/res/layout/activity_menu_juegos.xml
+++ b/app/src/main/res/layout/activity_menu_juegos.xml
@@ -87,7 +87,8 @@
         app:layout_constraintVertical_bias="0.89">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/m_3"
+            android:onClick="onClick_3"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
@@ -99,7 +100,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
-        android:text="Puzzle"
+        android:text="Rompecabezas"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
