--- a/app/src/main/res/drawable/degradado.xml
+++ b/app/src/main/res/drawable/degradado.xml
@@ -2,9 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient android:angle="90"
-        android:endColor="@color/cardview_dark_background"
-        android:centerColor="@color/colorPrimary"
-        android:startColor="@color/colorAccent"/>
+        android:endColor="#03A9F4"
+        android:centerColor="#9C27B0"
+        android:startColor="#E91E63"
+        />
 
 
 </shape>
